resize, logo, styling

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "angular": "^1.6.9",
     "angular-electron": "^0.2.1",
+    "angular-resizable": "^1.2.0",
     "angular-route": "^1.6.9",
     "bulma": "^0.6.2",
     "electron": "^1.7.12",
